--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/fengjutian/fjt#readme",
   "description": "",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "express": "^4.18.2",
+    "open": "^9.1.0",
+    "serve-index": "^1.9.1"
   }
 }
