--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "express": "^4.18.2",
+    "koa": "^2.14.2",
+    "koa-body-parser": "^1.1.2",
+    "koa-router": "^12.0.1",
+    "koa-views": "^8.1.0",
+    "monaco-editor": "^0.44.0",
     "open": "^9.1.0",
     "serve-index": "^1.9.1"
   }
